event select movie

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <bbva-core-demo-helper>
+    <bbva-core-demo-helper events='["get-id-movie-event"]'>
       <bbva-core-demo-case heading="Basic" description="Default specs">
         <template>
           <bbva-list-movie-card id="demo"></bbva-list-movie-card>
